# BedRust

./: Cargo.toml  README.md  diesel.toml
migrations/: 20231031134145_coffees.down.sql  20231031134145_coffees.up.sql
migrations/2023-10-21-163127_coffees/: down.sql  up.sql
src/: handler.rs  main.rs  model.rs  response.rs
src/application/: mod.rs
src/application/clients/: database_client.rs  mod.rs
src/application/models/: coffee_model.rs  failure_model.rs  mod.rs  response_model.rs
src/application/usecases/: create_coffee_use_case.rs  delete_coffee_use_case.rs  mod.rs  paginate_coffee_use_case.rs  search_coffee_use_case.rs  update_coffee_use_case.rs
src/databases/: memory_database.rs  mod.rs  postgres_database.rs
src/domain/: mod.rs
src/domain/entities/: coffee_entity.rs  faiulure_entity.rs  mod.rs
src/domain/repositories/: coffee_repository.rs  repository.rs
src/domain/usecases/: use_case.rs
src/handlers/: coffee_handler.rs
src/infrastructure/: mod.rs
src/infrastructure/clients/: postgres_client.rs
src/infrastructure/databases/: database.rs  mod.rs  postgres_database.rs
src/infrastructure/repositories/: coffee_impl_repository.rs  coffee_repository.rs  mod.rs
src/infrastructure/schemas/: coffee_schema.rs  mod.rs  schema.rs
src/models/: coffee_model.rs  mod.rs
src/presentation/: mod.rs
src/presentation/configuration/: coffee_state_configuration.rs  database_configuration.rs  mod.rs
src/presentation/container/: coffee_container.rs  mod.rs
src/responses/: coffee_response.rs  mod.rs
src/schemas/: schema.rs
(+9 files in other folders)
