[package]
name = "coffee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
package = "0.0.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features = ["serde"]}
serde = { version = "1.0.189", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
diesel = { version = "2.1.3", features = ["chrono", "postgres", "r2d2"] }
