[package]
name = "coffee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
chrono = { version = "0.4.31", features = ["serde"]}
serde = { version = "1.0.189", features = ["derive"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
async-trait = "0.1.74"
actix-web = "4.4.0"
